--- a/hvfrontend/package.json
+++ b/hvfrontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "dompurify": "^2.4.0",
+    "html-react-parser": "^3.0.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
