--- a/hvfrontend/package.json
+++ b/hvfrontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.2",
     "dompurify": "^2.4.0",
     "html-react-parser": "^3.0.4",
+    "isomorphic-dompurify": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
