--- a/hvfrontend/.env
+++ b/hvfrontend/.env
@@ -1,2 +1,3 @@
-# REACT_APP_API_URL = 'https://127.0.0.1:8000'
-REACT_APP_API_URL = 'https://hikingventures-gb.up.railway.app'
+# REACT_APP_API_URL = 'http://127.0.0.1:8000'
+# REACT_APP_API_URL = 'https://hikingventures.gdbecker.repl.co'
+REACT_APP_API_URL = 'https://hikingventures.gdbecker.repl.co'
