--- a/hvfrontend/.env
+++ b/hvfrontend/.env
@@ -1,3 +1,4 @@
 # REACT_APP_API_URL = 'http://127.0.0.1:8000'
 # REACT_APP_API_URL = 'https://hikingventures.gdbecker.repl.co'
-REACT_APP_API_URL = 'https://hikingventures.gdbecker.repl.co'
+# REACT_APP_API_URL = 'https://hikingventures.gdbecker.repl.co'
+REACT_APP_API_URL = 'https://f1d1ae6d-e444-40e4-9bf1-31559ec4a70a-00-ivtuh9u1pi5x.hacker.replit.dev'
